fix metadesc + img sizes

--- a/templates/anims/index.html.twig
+++ b/templates/anims/index.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 
 {% block title %}
-	Animation musicale à l'accordéon | Jérémy Dutheil
+	Animation musicale à l'accordéon - Mariage, soirée, cocktail... | Jérémy Dutheil
 {% endblock %}
 
 {% block metadesc %}
