--- a/templates/anims/seniors.html.twig
+++ b/templates/anims/seniors.html.twig
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block metadesc %}
-	<meta name="description" content="Animation musicale à l'accordéon pour seniors (maison de retraite, EHPAD), Paris et Ile de France : jazz, chanson française, musette, ...">
+	<meta name="description" content="Vous cherchez une animation musicale à l'accordéon pour seniors (maison de retraite, EHPAD) ? À Paris ou en Ile de France ? Jazz, chanson française, musette, ...">
 {% endblock %}
 
 {% block body %}
