--- a/templates/bands/elena.html.twig
+++ b/templates/bands/elena.html.twig
@@ -4,6 +4,10 @@
 	Elena Josse | Duo accordéon / voix, chanson française
 {% endblock %}
 
+{% block metadesc %}
+	<meta name="description" content="Elena Josse et Jérémy Dutheil : duo chanson française, accordéon / voix">
+{% endblock %}
+
 {% block body %}
 	<section class="flash flash--limited">
 		<div class="flash-item">
