--- a/templates/bands/fdf.html.twig
+++ b/templates/bands/fdf.html.twig
@@ -4,6 +4,10 @@
 	Les Fils de Flûte | Chanson française festive
 {% endblock %}
 
+{% block metadesc %}
+	<meta name="description" content="Les Fils de Flûte : groupe de chanson française festive">
+{% endblock %}
+
 {% block body %}
 	<section class="flash flash--limited">
 		<div class="flash-item">
