--- a/templates/bands/madjid.html.twig
+++ b/templates/bands/madjid.html.twig
@@ -4,6 +4,10 @@
 	Madjid et Yano Tët | Rock oriental
 {% endblock %}
 
+{% block metadesc %}
+	<meta name="description" content="Madjid et Yano Tët : groupe de rock oriental">
+{% endblock %}
+
 {% block body %}
 	<section class="flash flash--limited">
 		<div class="flash-item">
