--- a/templates/bands/marie.html.twig
+++ b/templates/bands/marie.html.twig
@@ -4,6 +4,10 @@
 	Marie Pétrolette | Chanson française
 {% endblock %}
 
+{% block metadesc %}
+	<meta name="description" content="Marie Pétrolette : chansons fémino-humoristiques, accompagnées à l'accordéon par Jérémy Dutheil">
+{% endblock %}
+
 {% block body %}
 	<section class="flash flash--limited">
 		<div class="flash-item">
