--- a/templates/bands/marquise.html.twig
+++ b/templates/bands/marquise.html.twig
@@ -4,6 +4,10 @@
 	La Marquise | Trio chanson swing
 {% endblock %}
 
+{% block metadesc %}
+	<meta name="description" content="La Marquise : trio chanson swing, humoristique et festif">
+{% endblock %}
+
 {% block body %}
 	<section class="flash flash--limited">
 		<div class="flash-item">
