--- a/templates/bands/mime.html.twig
+++ b/templates/bands/mime.html.twig
@@ -4,6 +4,10 @@
 	MimE | Chanson débraillée !
 {% endblock %}
 
+{% block metadesc %}
+	<meta name="description" content="MimE : chanson française à textes, arrangements jazz en quartet">
+{% endblock %}
+
 {% block body %}
 	<section class="flash flash--limited">
 		<div class="flash-item">
