--- a/templates/bands/ruelamome.html.twig
+++ b/templates/bands/ruelamome.html.twig
@@ -4,6 +4,10 @@
 	Rue la Môme | Hommage à Edith Piaf
 {% endblock %}
 
+{% block metadesc %}
+	<meta name="description" content="Rue la Môme : spectacle hommage à Edith Piaf">
+{% endblock %}
+
 {% block body %}
 	<section class="flash flash--limited">
 		<div class="flash-item">
