--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -60,76 +60,6 @@
 	</section>
 	<!-- /.edito -->
 
-	<section class="content-section sideman">
-		<div class="container page-section">
-			<div class="row flex-column-reverse flex-md-row">
-				<div class="col-sm-4 ">
-					<img src="{{ asset('img/elena.jpg') }}" alt="Chanteuse et accordéoniste" title="Elena Josse et Jérémy DUTHEIL, accordéon / voix" class="img-fluid page-section__img">
-				</div>
-
-				<div class="col-sm-8 page-section__content-wrapper">
-					<div>
-						<h2 class="section-title section-title--blank">Musicien accompagnateur</h2>
-
-						<p class="txt--blank">
-							Bercé par la chanson française, j'apprécie tout particulièrement l'exercice d'accompagnement en formule dépouillée <strong>accordéon / voix</strong> ; ici, ce sont les textes qui priment, et la musique se fait discrète pour les accompagner et embellir l'arrière plan. L'importante liberté d'expression permet de proposer des arrangements originaux, donnant lieu à une interprétation moderne de morceaux parfois vieux d'une centaine d'années.
-						</p>
-
-						<p class="txt--blank">
-							Je travaille actuellement avec plusieurs <em class="text-link txt--blank">chanteurs et chanteuses</em>, embrassant un large répertoire au sein même de la chanson ; certaines formations s'orienteront plutôt vers les standards du style (Brel, Piaf, Ferré), d'autres vers des auteurs moins connus du grand public (Leprest, Dimey). Mon accordéon s'invite aussi bien sur de la chanson réaliste (Damia, Fréhel), que de la chanson coquine (Odette Laure, Anne Sylveste) ou révoltée (Renaud, Paccoud).
- 						</p>
-
-						<p class="txt--blank">
-							Accordéoniste à Paris, c'est avec ces petites formations que je me produis le plus régulièrement dans les lieux intimistes de la capitale ; Montmartre, Pigalle, l'accordéon.. Ambiance guinguette et années 60 assurée !
-						</p>
-
-						<p>
-							<a href="{{ path('collaborations') }}" class="btn-secondary">Voir les artistes accompagnés</a>
-						</p>
-					</div>
-				</div>
-			</div>
-			<!-- /.row -->
-		</div>
-		<!-- /.page-section -->
-	</section>
-	<!-- /.sideman -->
-
-	<section class="content-section bands">
-		<div class="container page-section">
-			<div class="row">
-				<div class="col-sm-8">
-					<h2 class="section-title">En groupe</h2>
-
-					<p>
-						En groupe, l'espace musical est à partager entre les différents instrumentistes ; les rôles sont définis plus rigoureusement, et chacun contribue à un son global. L'apport notamment d'une <strong>section rythmique</strong> (basse, batterie) va permettre d'obtenir une musique plus puissante, laissant à l'accordéon une place plus <strong>mélodique</strong>.
-					</p>
-
-					<p>
-						C'est aussi et avant tout l'occasion de partager une véritable <strong>aventure humaine</strong>, que ce soit dans la vie quotidienne (répétitions, organisation) ou en tournée sur les scènes françaises.
-					</p>
-
-					<p>
-						Travailler avec d'autres musiciens me permet enfin d'aborder des styles originaux, moins accessibles à l'accordéon solo ; je joue par exemple de la <em class="text-link">chanson teintée de jazz</em>, du <em class="text-link">rock oriental</em> ou de la <em class="text-link">chanson swing</em>. <br>
-						Avec ces différents projets, nous travaillons essentiellement sur nos <strong>propres compositions</strong>.
-					</p>
-
-					<p>
-						Certain de ces ensembles de musiciens se destinent plus particulièrement à l'animation de vos événements (mariage, anniversaire, soirée privée..), comme notre <a style="color: #000000;">groupe de jazz manouche</a>, par exemple (voir aussi l'ensemble de nos <a href="{{ path('musiciens_soirees') }}">musiciens pour vos soirées</a>).
-					</p>
-
-					<p>
-						<a href="{{ path('collaborations') }}" class="btn-secondary">Voir les groupes</a>
-					</p>
-				</div>
-
-				<div class="col-sm-4">
-					<img class="img-fluid page-section__img" src="img/band.jpg" alt="Le groupe MimE sur scène" title="Le groupe MimE sur scène, avec Jérémy Dutheil à l'accordéon">
-				</div>
-			</div>
-		</div>
-	</section>
-
 	<section class="content-section anim">
 		<div class="container page-section">
 			<div class="row flex-column-reverse  flex-md-row">
@@ -158,5 +88,75 @@
 			<!-- /.row -->
 		</div>
 		<!-- /.page-section -->
+	</section>
+
+	<section class="content-section bands">
+		<div class="container page-section">
+			<div class="row flex-column-reverse flex-md-row">
+				<div class="col-sm-4 ">
+					<img src="{{ asset('img/elena.jpg') }}" alt="Chanteuse et accordéoniste" title="Elena Josse et Jérémy DUTHEIL, accordéon / voix" class="img-fluid page-section__img">
+				</div>
+
+				<div class="col-sm-8 page-section__content-wrapper">
+					<div>
+						<h2 class="section-title">Musicien accompagnateur</h2>
+
+						<p>
+							Bercé par la chanson française, j'apprécie tout particulièrement l'exercice d'accompagnement en formule dépouillée <strong>accordéon / voix</strong> ; ici, ce sont les textes qui priment, et la musique se fait discrète pour les accompagner et embellir l'arrière plan. L'importante liberté d'expression permet de proposer des arrangements originaux, donnant lieu à une interprétation moderne de morceaux parfois vieux d'une centaine d'années.
+						</p>
+
+						<p>
+							Je travaille actuellement avec plusieurs <em class="text-link ">chanteurs et chanteuses</em>, embrassant un large répertoire au sein même de la chanson ; certaines formations s'orienteront plutôt vers les standards du style (Brel, Piaf, Ferré), d'autres vers des auteurs moins connus du grand public (Leprest, Dimey). Mon accordéon s'invite aussi bien sur de la chanson réaliste (Damia, Fréhel), que de la chanson coquine (Odette Laure, Anne Sylveste) ou révoltée (Renaud, Paccoud).
+ 						</p>
+
+						<p>
+							Accordéoniste à Paris, c'est avec ces petites formations que je me produis le plus régulièrement dans les lieux intimistes de la capitale ; Montmartre, Pigalle, l'accordéon.. Ambiance guinguette et années 60 assurée !
+						</p>
+
+						<p>
+							<a href="{{ path('collaborations') }}" class="btn-secondary">Voir les artistes accompagnés</a>
+						</p>
+					</div>
+				</div>
+			</div>
+			<!-- /.row -->
+		</div>
+		<!-- /.page-section -->
+	</section>
+	<!-- /.sideman -->
+
+	<section class="content-section sideman">
+		<div class="container page-section">
+			<div class="row">
+				<div class="col-sm-8">
+					<h2 class="section-title section-title--blank">En groupe</h2>
+
+					<p class="txt--blank">
+						En groupe, l'espace musical est à partager entre les différents instrumentistes ; les rôles sont définis plus rigoureusement, et chacun contribue à un son global. L'apport notamment d'une <strong>section rythmique</strong> (basse, batterie) va permettre d'obtenir une musique plus puissante, laissant à l'accordéon une place plus <strong>mélodique</strong>.
+					</p>
+
+					<p class="txt--blank">
+						C'est aussi et avant tout l'occasion de partager une véritable <strong>aventure humaine</strong>, que ce soit dans la vie quotidienne (répétitions, organisation) ou en tournée sur les scènes françaises.
+					</p>
+
+					<p class="txt--blank">
+						Travailler avec d'autres musiciens me permet enfin d'aborder des styles originaux, moins accessibles à l'accordéon solo ; je joue par exemple de la <em>chanson teintée de jazz</em>, du <em>rock oriental</em> ou de la <em>chanson swing</em>. <br>
+						Avec ces différents projets, nous travaillons essentiellement sur nos <strong>propres compositions</strong>.
+					</p>
+
+					<p class="txt--blank">
+						Certain de ces ensembles de musiciens se destinent plus particulièrement à l'animation de vos événements (mariage, anniversaire, soirée privée..), comme notre <a href="{{ path('manouche') }}" style="color: #ffffff;">groupe de jazz manouche</a>, par exemple (voir aussi l'ensemble de nos <a href="{{ path('musiciens_soirees') }}" style="color: #ffffff;">musiciens pour vos soirées</a>).
+					</p>
+
+					<p>
+						<a href="{{ path('collaborations') }}" class="btn-secondary">Voir les groupes</a>
+					</p>
+				</div>
+
+				<div class="col-sm-4">
+					<img class="img-fluid page-section__img" src="img/band.jpg" alt="Le groupe MimE sur scène" title="Le groupe MimE sur scène, avec Jérémy Dutheil à l'accordéon">
+				</div>
+			</div>
+		</div>
 	</section>
 {% endblock %}
