--- a/templates/pages/accordeoniste.html.twig
+++ b/templates/pages/accordeoniste.html.twig
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block metadesc %}
-    <meta name="description" content="Jérémy Dutheil est un accordéoniste française ; musicien professionnel, il évolue principalement dans le jazz et la chanson française.">
+    <meta name="description" content="Jérémy Dutheil est un accordéoniste français ; musicien professionnel, il évolue principalement dans le jazz et la chanson française.">
 {% endblock %}
 
 {% block body %}
