--- a/templates/pages/contact.html.twig
+++ b/templates/pages/contact.html.twig
@@ -2,6 +2,10 @@
 
 {% block title %}Contact | Jérémy Dutheil | Accordéoniste, Paris{% endblock %}
 
+{% block metadesc %}
+	<meta name="description" content="Une question ? Un projet à proposer ? Besoin d'un devis pour une animation musicale ? Contactez moi !">
+{% endblock %}
+
 {% block body %}
 	<section class="flash flash--limited">
 		<div class="flash-item">
