--- a/templates/pages/musiciens_soirees.html.twig
+++ b/templates/pages/musiciens_soirees.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 
 {% block title %}
-	Musiciens pour soirées | Jérémy Dutheil
+	Musiciens pour soirées - avec accordéoniste | Jérémy Dutheil
 {% endblock %}
 
 {% block metadesc %}
