--- a/templates/pages/videos.html.twig
+++ b/templates/pages/videos.html.twig
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block metadesc %}
-    <meta name="description" content="Quelques vidéos pour découvrir ma musique...">
+    <meta name="description" content="Quelques vidéos Youtube autour de l'accordéon, pour découvrir ma musique...">
 {% endblock %}
 
 {% block body %}
