fix some title and metadesc

--- a/templates/anims/mariages.html.twig
+++ b/templates/anims/mariages.html.twig
@@ -1,11 +1,11 @@
 {% extends 'base.html.twig' %}
 
 {% block title %}
-	Animation musicale à l'accordéon pour mariage : jazz, chanson française, .. | Jérémy DUTHEIL
+	Animation musicale à l'accordéon pour mariage : jazz, chanson française, ...
 {% endblock %}
 
 {% block metadesc %}
-	<meta name="description" content="Vous cherchez un accordéoniste ou un groupe de musique pour votre mariage (vin d'honneur, repas, ...) ? N'hésitez plus, et découvrez nos formules sur mesure (jazz manouche, chanson française, ...) !">
+	<meta name="description" content="Vous cherchez un accordéoniste ou un groupe de musique pour votre mariage (vin d'honneur, repas, ...) ? Découvrez nos formules : jazz manouche, chanson, ..!">
 {% endblock %}
 
 {% block body %}
