--- a/templates/anims/seniors.html.twig
+++ b/templates/anims/seniors.html.twig
@@ -1,11 +1,11 @@
 {% extends 'base.html.twig' %}
 
 {% block title %}
-	Animation musicale à l'accordéon pour seniors, Paris et Ile de France | Jérémy DUTHEIL
+	Animation musicale à l'accordéon pour seniors | Jérémy Dutheil
 {% endblock %}
 
 {% block metadesc %}
-	<meta name="description" content="Vous cherchez une animation musicale à l'accordéon pour seniors (maison de retraite, EHPAD) ? À Paris ou en Ile de France ? Jazz, chanson française, musette, ...">
+	<meta name="description" content="Vous cherchez une animation musicale à l'accordéon pour seniors (maison de retraite, EHPAD) ? À Paris ou en Ile de France ? Jazz, chanson française, musette...">
 {% endblock %}
 
 {% block body %}
