--- a/templates/pages/manouche.html.twig
+++ b/templates/pages/manouche.html.twig
@@ -1,11 +1,11 @@
 {% extends 'base.html.twig' %}
 
 {% block title %}
-	Groupe jazz manouche pour vos événements | Jérémy Dutheil, accordéoniste à Paris
+	Groupe jazz manouche pour tous vos événements - avec accordéon
 {% endblock %}
 
 {% block metadesc %}
-	<meta name="description" content="Vous cherchez un groupe de jazz manouche pour votre vin d'honneur, soirée privée ou cocktail d'entreprise ? Musiciens professionnels, nous vous proposons des formules sur mesure.">
+	<meta name="description" content="Vous cherchez un groupe de jazz manouche pour votre vin d'honneur, soirée privée ou cocktail d'entreprise ? Musiciens professionnels, découvrez nos formules.">
 {% endblock %}
 
 {% block body %}
