--- a/templates/pages/tarifs.html.twig
+++ b/templates/pages/tarifs.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 
 {% block title %}
-    Quel est le tarif d'un groupe de musique pour votre soirée ? | Jérémy Dutheil
+    Quel est le tarif d'un groupe de musique pour votre soirée ? 
 {% endblock %}
 
 {% block metadesc %}
