--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -22,10 +22,10 @@
 
 	<section class="flash-ghost"></section>
 
-	<section class="content-section edito">
-		<div class="container page-section">
+	<section class="content-section page-section edito">
+		<div class="container">
 			<div class="row">
-				<div class="col-sm-8 page-section__content-wrapper">
+				<div class="col-md-8 page-section__content-wrapper">
 					<div>
 						<h1 class="section-title">Accordéoniste à Paris</h2>
 
@@ -42,14 +42,14 @@
 						</p>
 
 						<p>
-							<a href="{{ path('bio') }}" class="btn-secondary">Lire la biographie</a>
+							<a href="{{ path('bio') }}" class="btn-secondary"><span class="d-none d-md-inline">Lire la</span> Biographie</a>
 						</p>
 					</div>
 					<!-- /.page-section__content-wrapper -->
 				</div>
 				<!-- /.col-sm-8 -->
 
-				<div class="col-sm-4">
+				<div class="col-md-4">
 					<img src="{{ asset('img/videos-pic.jpg') }}" alt="Jérémy DUTHEIL, accordéoniste, en concert" title="Accordéoniste parisien en concert" class="img-fluid page-section__img">
 				</div>
 				<!-- /.col-sm-4 -->
@@ -60,14 +60,14 @@
 	</section>
 	<!-- /.edito -->
 
-	<section class="content-section anim">
-		<div class="container page-section">
+	<section class="content-section page-section anim">
+		<div class="container">
 			<div class="row flex-column-reverse  flex-md-row">
-				<div class="col-sm-4">
+				<div class="col-md-4">
 					<img src="{{ asset('img/anim.jpg') }}" alt="Accordéoniste à la campagne" title="Jérémy Dutheil, accordéoniste à Paris" class="img-fluid page-section__img">
 				</div>
 
-				<div class="col-sm-8 page-section__content-wrapper">
+				<div class="col-md-8 page-section__content-wrapper">
 					<div>
 						<h2 class="section-title section-title--blank">Mariage, soirée, cocktail . . .</h2>
 
@@ -80,7 +80,7 @@
  						</p>
 
 						<p>
-							<a href="{{ path('animations') }}" class="btn-secondary">Voir les formules d'animations musicales</a>
+							<a href="{{ path('animations') }}" class="btn-secondary">Voir les formules <span class="d-none d-md-inline">d'animations musicales</span></a>
 						</p>
 					</div>
 				</div>
@@ -90,14 +90,14 @@
 		<!-- /.page-section -->
 	</section>
 
-	<section class="content-section bands">
-		<div class="container page-section">
+	<section class="content-section page-section bands">
+		<div class="container">
 			<div class="row flex-column-reverse flex-md-row">
-				<div class="col-sm-4 ">
+				<div class="col-md-4 ">
 					<img src="{{ asset('img/elena.jpg') }}" alt="Chanteuse et accordéoniste" title="Elena Josse et Jérémy DUTHEIL, accordéon / voix" class="img-fluid page-section__img">
 				</div>
 
-				<div class="col-sm-8 page-section__content-wrapper">
+				<div class="col-md-8 page-section__content-wrapper">
 					<div>
 						<h2 class="section-title">Musicien accompagnateur</h2>
 
@@ -114,7 +114,7 @@
 						</p>
 
 						<p>
-							<a href="{{ path('collaborations') }}" class="btn-secondary">Voir les artistes accompagnés</a>
+							<a href="{{ path('collaborations') }}" class="btn-secondary">Voir les artistes <span class="d-none d-md-inline">accompagnés</a>
 						</p>
 					</div>
 				</div>
@@ -125,10 +125,10 @@
 	</section>
 	<!-- /.sideman -->
 
-	<section class="content-section sideman">
-		<div class="container page-section">
+	<section class="content-section page-section sideman">
+		<div class="container">
 			<div class="row">
-				<div class="col-sm-8">
+				<div class="col-md-8">
 					<h2 class="section-title section-title--blank">En groupe</h2>
 
 					<p class="txt--blank">
@@ -153,7 +153,7 @@
 					</p>
 				</div>
 
-				<div class="col-sm-4">
+				<div class="col-md-4">
 					<img class="img-fluid page-section__img" src="img/band.jpg" alt="Le groupe MimE sur scène" title="Le groupe MimE sur scène, avec Jérémy Dutheil à l'accordéon">
 				</div>
 			</div>
