--- a/templates/pages/manouche.html.twig
+++ b/templates/pages/manouche.html.twig
@@ -45,7 +45,9 @@
 
             <div class="row">
 				<div class="col-md-6">
-					<iframe class="video-center" width="560" height="315" src="https://www.youtube.com/embed/W_uOwoGcBuE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+					<div class="embed-responsive embed-responsive-16by9">
+						<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/W_uOwoGcBuE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+					</div>
 
 					<p class="text-center" style="margin-top: 15px;">
 						Ici avec notre propre arrangement de <i>La Foule</i>, célèbre morceau d'<strong>Edith Piaf</strong> ; nous avons choisi de l'interpréter dans une version douce et intimiste, pour un moment relaxant..
@@ -54,7 +56,9 @@
 				</div>
 
 				<div class="col-md-6">
-					<iframe width="560" height="315" src="https://www.youtube.com/embed/Iklby0R-WyQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+					<div class="embed-responsive embed-responsive-16by9">
+						<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/Iklby0R-WyQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+					</div>
 
 					<p class="text-center" style="margin-top: 15px;">
 						Un grand classique parmi les standards jazz : <i>Sunny Side of the Street</i> !
@@ -70,7 +74,9 @@
 
             <div class="row">
                 <div class="col-md-12">
-                    <iframe class="video-center" width="800" height="500" src="https://www.youtube.com/embed/CXq4DWhwqSU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+					<div class="embed-responsive embed-responsive-16by9">
+                    	<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/CXq4DWhwqSU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+					</div>
 
                     <p class="text-center" style="margin-top: 15px;">
                         Quelques extraits en trio jazz manouche : Bossa Dorado, Autumn Leaves, All of Me, Fly me to the Moon
