--- a/templates/pages/musiciens_soirees.html.twig
+++ b/templates/pages/musiciens_soirees.html.twig
@@ -44,7 +44,7 @@
             </p>
 
 			<p>
-				<a class="btn btn-primary" href="{{ path('manouche') }}">Plus d'informations sur le groupe jazz manouche</a>
+				<a class="btn btn-primary" href="{{ path('manouche') }}">Plus d'informations <span class="d-none d-md-inline">sur le groupe jazz manouche</span></a>
 			</p>
 
             <div class="row">
