--- a/templates/pages/videos.html.twig
+++ b/templates/pages/videos.html.twig
@@ -32,12 +32,14 @@
 			</p>
 
 			<p>
-				<a href="{{ path('manouche') }}" class="btn btn-primary">Plus d'informations sur le duo accordéon / guitare</a>
+				<a href="{{ path('manouche') }}" class="btn btn-primary">Plus d'informations <span class="d-none d-md-inline">sur le duo accordéon / guitare</span></a>
 			</p>
 
 			<div class="row">
 				<div class="col-md-12">
-					<iframe class="video-center" width="800" height="500" src="https://www.youtube.com/embed/W_uOwoGcBuE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+					<div class="embed-responsive embed-responsive-16by9">
+						<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/W_uOwoGcBuE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+					</div>
 
 					<p class="text-center" style="margin-top: 15px;">
 						Ici avec notre propre arrangement de <i>La Foule</i>, célèbre morceau d'<strong>Edith Piaf</strong> ; nous avons choisi de l'interpréter dans une version douce et intimiste, pour un moment relaxant..
@@ -53,12 +55,14 @@
 			</p>
 
 			<p>
-				<a class="btn btn-primary" href="{{ path('animations') }}">Plus d'informations sur la formule en solo</a>
+				<a class="btn btn-primary" href="{{ path('animations') }}">Plus d'informations <span class="d-none d-md-inline">sur la formule en solo</span></a>
 			</p>
 
             <div class="row">
                 <div class="col-md-6">
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/8eY4FsHf7g0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+					<div class="embed-responsive embed-responsive-16by9">
+                    	<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/8eY4FsHf7g0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+					</div>
 
 					<p class="text-center" style="margin-top: 15px;">
 						<i>Carnevale</i> est un morceau récent, écrit par l'accordéoniste jazz <strong>Renzo Ruggieri</strong> ; pièce devenue culte dans le milieu de l'accordéon, elle est notamment très jouée dans les concours internationaux.
@@ -67,7 +71,9 @@
 				</div>
 
 				<div class="col-md-6">
-					<iframe width="560" height="315" src="https://www.youtube.com/embed/mv3DgoYPCds" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+					<div class="embed-responsive embed-responsive-16by9">
+						<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/mv3DgoYPCds" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+					</div>
 
 					<p class="text-center" style="margin-top: 15px;">
 						<i>Ain't Misbehavin</i> est un morceau de 1929, écrit par Fats Waller et Harry Brooks, popularisée notamment par <strong>Louis Armstrong</strong> ; ici jouée à la manière de <strong>Frank Marocco</strong>, célèbre accordéoniste jazz.
@@ -78,7 +84,9 @@
 
             <div class="row">
 				<div class="col-md-6">
-					<iframe width="560" height="315" src="https://www.youtube.com/embed/VVWMhc7LNcM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+					<div class="embed-responsive embed-responsive-16by9">
+						<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/VVWMhc7LNcM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+					</div>
 
 					<p class="text-center" style="margin-top: 15px;">
 						<i>Grain de Fantaisie</i> est une très jolie valse, composée par <strong>Jérôme Richard</strong> (primés plusieurs fois dans les concours internationaux) et <strong>Maurice Larcange</strong>.
@@ -87,7 +95,9 @@
 				</div>
 
                 <div class="col-md-6">
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/2ikPP4jTAfE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+					<div class="embed-responsive embed-responsive-16by9">
+                    	<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/2ikPP4jTAfE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+					</div>
 
 					<p class="text-center" style="margin-top: 15px;">
 						Est-il encore nécessaire de présenter <strong>Jo Privat</strong> ? Accordéoniste des années 40, il sera celui qui réunit le musette et le jazz manouche ; je vous propose ici l'une de ses (nombreuses) valses swing, <i>Sa Préférée</i>.
@@ -104,10 +114,15 @@
 
 			<div class="row">
 				<div class="col-md-6">
-					<iframe width="560" height="315" src="https://www.youtube.com/embed/gtqG5br0M60" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+					<div class="embed-responsive embed-responsive-16by9">
+						<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/gtqG5br0M60" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+					</div>
 				</div>
+
 				<div class="col-md-6">
-					<iframe width="560" height="315" src="https://www.youtube.com/embed/_cyzXvBjHkE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+					<div class="embed-responsive embed-responsive-16by9">
+						<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/_cyzXvBjHkE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+					</div>
 				</div>
 			</div>
 
@@ -119,8 +134,10 @@
 
             <div class="row">
                 <div class="col-md-12">
-                    <iframe width="100%" height="600" scrolling="yes" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/400925852&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=false"></iframe>
-                </div>
+					<div class="embed-responsive embed-responsive-16by9">
+                    	<iframe class="embed-responsive-item" scrolling="yes" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/400925852&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=false"></iframe>
+					</div>
+				</div>
             </div>
         </div>
     </section>
