--- a/public/css/main.css
+++ b/public/css/main.css
@@ -7,7 +7,7 @@ body {
 
 	background-color: #FFFFFF;
 
-	overflow-x: hidden;
+	/*overflow-x: hidden;*/
 }
 
 .text-link {
@@ -249,7 +249,7 @@ a:hover { text-decoration: none; }
     text-transform: uppercase;
 
     color: #2d2d2d;
-    font-size: 50px;
+    font-size: 36px;
 
     font-family: 'Oswald', sans-serif;
     letter-spacing: -1px;
