--- a/public/css/main.css
+++ b/public/css/main.css
@@ -266,11 +266,11 @@ a:hover { text-decoration: none; }
 	}
 
 	.section-title--small {
-		font-size: 30px;
+		font-size: 30px !important;
 		line-height: 30px;
 	}
 
-	.section-title--smaller { font-size: 24px; line-height: 24px; }
+	.section-title--smaller { font-size: 24px !important; line-height: 24px; }
 
 	.section-title--blank { color: #eeeeee; }
 
