fix wordpress responsive

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -374,4 +374,8 @@ a:hover { text-decoration: none; }
 	margin: auto;
 }
 
+/* Wordpress */
+
 #sidebar > ul { padding: 0; }
+.wp-post-image { height: auto; }
+.post { overflow: hidden; }
