--- a/templates/pages/contact.html.twig
+++ b/templates/pages/contact.html.twig
@@ -28,7 +28,7 @@
 			</p>
 
 			<p>
-				Pour comprendre les tarifs pratiqués, vous pouvez consulter mon article à ce sujet : <a href="{{ path('tarifs') }}">Quel est le tarif d'un groupe de musique pour votre soirée ?</a>
+				Pour comprendre les tarifs pratiqués, vous pouvez consulter mon article à ce sujet : <a href="https://www.jeremy-dutheil.fr/blog/quel-est-le-tarif-dun-groupe-de-musique-pour-votre-soiree/">Quel est le tarif d'un groupe de musique pour votre soirée ?</a>
 			</p>
 		</div>
 	</section>
