recherche accordeoniste pour animer soiree

--- a/templates/anims/index.html.twig
+++ b/templates/anims/index.html.twig
@@ -124,7 +124,7 @@
 			</div>
 
 			<p>
-				<a class="btn btn-primary" href="{{ path('videos') }}">Voir d'autres vidéos</a>
+				<a class="btn btn-primary" href="{{ path('accordeoniste_soiree') }}">Plus d'informations</a>
 			</p>
 
 			<h2 class="section-title section-title--small" style="margin-top: 20px;">En groupe, pour plus d'énergie</h2>
