--- a/public/css/main.css
+++ b/public/css/main.css
@@ -26,7 +26,8 @@ body {
 .row--mtop { margin-top: 35px; }
 .col--mbot { margin-bottom: 35px; }
 
-a:hover { text-decoration: none; }
+a { color: #ff841c; }
+a:hover { color: #ff841c; text-decoration: none; }
 
 .txt--blank { color: #ffffff; }
 
