--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -64,7 +64,7 @@
 		<div class="container">
 			<div class="row flex-column-reverse  flex-md-row">
 				<div class="col-md-4">
-					<img src="{{ asset('img/anim.jpg') }}" alt="Accordéoniste à la campagne" title="Jérémy Dutheil, accordéoniste à Paris" class="img-fluid page-section__img">
+					<img src="{{ asset('img/anim.jpg') }}" alt="Accordéoniste sur scène, à Paris" title="Jérémy Dutheil, accordéoniste à Paris" class="img-fluid page-section__img">
 				</div>
 
 				<div class="col-md-8 page-section__content-wrapper">
@@ -76,7 +76,7 @@
 						</p>
 
 						<p class="txt--blank">
-							À <a style="color: #ffffff;" href="{{ path('soirees_paris') }}">Paris</a> et dans la France entière, différentes formules sont disponibles et de nombreuses options sont discutables en amont de la prestation : acoustique ou sonorisé, styles abordés, ... Suivant vos envies et votre budget, je peux également venir accompagné d'autres musiciens ; lors d'un mariage ou d'une soirée privée, on appréciera tout particulièrement le <a style="color: #ffffff;" href="{{ path('manouche') }}">groupe de jazz manouche</a>, par exemple. J'accompagne également plusieurs chanteuses, avec lesquelles nous proposons des répertoires autour de la chanson française ; un duo très apprécié pour vos anniversaires, ou dans les maisons de retraite (EHPAD, ...) !
+							À <a style="color: #ffffff;" href="{{ path('soirees_paris') }}">Paris</a> et dans la France entière, différentes formules sont disponibles et de nombreuses options sont discutables en amont de la prestation : acoustique ou sonorisé, styles abordés, ... Suivant vos envies et votre budget, je peux venir <a href="{{ path('accordeoniste_soiree') }}">en solo</a> ou accompagné par d'autres musiciens ; lors d'un mariage ou d'une soirée privée, on appréciera tout particulièrement le <a style="color: #ffffff;" href="{{ path('manouche') }}">groupe de jazz manouche</a>, par exemple. J'accompagne également plusieurs chanteuses, avec lesquelles nous proposons des répertoires autour de la chanson française ; un duo très apprécié pour vos anniversaires, ou dans les maisons de retraite (EHPAD, ...) !
  						</p>
 
 						<p>
